--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,9 +2,9 @@ app:
   name: extension-spr
 spring:
     datasource:
-        url: jdbc:postgresql://10.10.88.182:5432/spr
-        username: postgres
-        password: 123456
+        url: jdbc:postgresql://10.3.17.141:5432/spr
+        username: spr
+        password: Dts@12345
         driverClassName: org.postgresql.Driver
     jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -12,7 +12,14 @@ spring:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
         show-sql: true
-        
+
+security:
+    authentication:
+        jwt:
+            secret-key: beeland
+            token-validity-in-seconds: 360000000
+            token-validity-in-seconds-for-remember-me: 720000000
+
 cors:
     allowed-origins: "*"
     allowed-methods: "*"
@@ -21,5 +28,5 @@ cors:
     allow-credentials: true
     max-age: 1800
 server:
-    port : 8080
+    port : 9001
 
