--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,34 +1,37 @@
 app:
   name: extension-spr
-spring:
-    datasource:
-        url: jdbc:postgresql://10.10.88.182:5432/spr
-        username: postgres
-        password: 123456
-        driverClassName: org.postgresql.Driver
-    jpa:
-        database-platform: org.hibernate.dialect.PostgreSQLDialect
-        properties:
-            hibernate:
-                dialect: org.hibernate.dialect.PostgreSQLDialect
-        show-sql: true
-    profiles:
-        active: local
-    
-        
-security:
-    authentication:
-        jwt:
-            secret-key: spr-config
-            token-validity-in-seconds: 360000000
-            token-validity-in-seconds-for-remember-me: 720000000
-cors:
-    allowed-origins: "*"
-    allowed-methods: "*"
-    allowed-headers: "*"
-    exposed-headers: "Authorization,Link,X-Total-Count"
-    allow-credentials: true
-    max-age: 1800
+
 server:
-    port : 8083
+  port: 8083
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/spr
+    username: postgres
+    password: talamvua1994
+    driverClassName: org.postgresql.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
+  profiles:
+    active: local
+
+
+security:
+  authentication:
+    jwt:
+      secret-key: spr-config
+      token-validity-in-seconds: 360000000
+      token-validity-in-seconds-for-remember-me: 720000000
+cors:
+  allowed-origins: "*"
+  allowed-methods: "*"
+  allowed-headers: "*"
+  exposed-headers: "Authorization,Link,X-Total-Count"
+  allow-credentials: true
+  max-age: 1800
+
 
