--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,15 @@
 app:
   name: extension-spr
 
-server:
-  port: 8083
-
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/spr
-    username: postgres
-    password: talamvua1994
-    driverClassName: org.postgresql.Driver
+  profiles:
+    active: testbed
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
-  profiles:
-    active: local
-
 
 security:
   authentication:
