--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,8 +5,9 @@ spring:
   datasource:
     url: jdbc:postgresql://ups-fo-spr-database.mobifone.vn:5432/spr
     username: spr
-    password: Dts@12345
+    password: spr
     driverClassName: org.postgresql.Driver
+
 
 
 
