--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8083
+  port: 9001
 
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/spr
     username: postgres
-    password: talamvua1994
+    password: 1234
     driverClassName: org.postgresql.Driver
