--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ app:
 
 spring:
   profiles:
-    active: prod
+    active: local
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
