--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,10 +3,21 @@ server:
 
 spring:
   datasource:
-    jdbc-url: jdbc:postgresql://ups-fo-spr-database.mobifone.vn:5432/spr
-    username: spr
-    password: spr
-    driverClassName: org.postgresql.Driver
+    # Primary database
+    primary:
+      jdbc-url: jdbc:postgresql://ups-fo-spr-database.mobifone.vn:5432/spr
+      username: spr
+      password: spr
+      driverClassName: org.postgresql.Driver
+    # Secondary database
+    secondary:
+      jdbc-url: jdbc:oracle:thin:@10.3.17.151:1521:db01
+      username: VASP4_SUBS
+      password: abcd1234
+      driverClassName: oracle.jdbc.OracleDriver
+
+app:
+  config-path: /web-admin/config/
 
 
 
