--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,9 +5,9 @@ spring:
   datasource:
     # Primary database
     primary:
-      url: jdbc:postgresql://localhost:5432/spr
-      username: postgres
-      password: 1234
+      jdbc-url: jdbc:postgresql://ups-fo-spr-database.mobifone.vn:5432/spr
+      username: spr
+      password: Dts@12345
       driverClassName: org.postgresql.Driver
 
     # Secondary database
@@ -16,3 +16,6 @@ spring:
       username: VASP4_SUBS
       password: abcd1234
       driverClassName: oracle.jdbc.OracleDriver
+
+file:
+  upload-dir: D:/DTS/Uploads
