--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,12 +5,8 @@ app:
 
 spring:
   profiles:
-    active: testbed
+    active: local
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
 
 security:
