--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,11 @@ app:
   name: extension-spr
   config-path: D:/Source/DTS/scan-register-tool/config-file
   scan-folder: /spr/register1-%d-%d-%d/
+  auto-import: /home/spr/import/
 
 spring:
   profiles:
-    active: prod
+    active: local
   jpa:
     show-sql: false
   servlet:
