--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,15 @@
 app:
-  name: extension-spr
+  name: spr-config
   config-path: D:/Source/DTS/scan-register-tool/config-file
   scan-folder: /spr/register1-%d-%d-%d/
   auto-import: /home/spr/import/
 
+server:
+  port: 9001
+
 spring:
   profiles:
-    active: prod
+    active: local
   jpa:
     show-sql: false
   servlet:
