--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -18,6 +18,12 @@ spring:
       username: ilink
       password: ilink
       driverClassName: org.postgresql.Driver
+    # Database ILARC
+    fourth:
+      jdbc-url: jdbc:postgresql://10.3.17.13:5432/ilarc
+      username: admin_repor
+      password: admin_repor
+      driverClassName: org.postgresql.Driver
 
 app:
   config-path: /web-admin/config/
