--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -24,8 +24,8 @@ spring:
     # Database ILARC
     fourth:
       jdbc-url: jdbc:postgresql://10.3.17.13:5432/ilarc
-      username: admin_repor
-      password: admin_repor
+      username: admin_report
+      password: admin_report
       driverClassName: org.postgresql.Driver
 
 app:
