--- a/src/main/resources/application-local-prod.yml
+++ b/src/main/resources/application-local-prod.yml
@@ -10,11 +10,11 @@ spring:
       password: spr
       driverClassName: org.postgresql.Driver
 
-    # Secondary database
+    # Database VASP
     secondary:
-      jdbc-url: jdbc:oracle:thin:@10.3.17.153:1521:db01
-      username: VASP4_SUBS_TEST
-      password: Dts@1234
+      jdbc-url: jdbc:oracle:thin:@10.50.9.161:1521:vasp1
+      username: flowone_spr
+      password: fl0wOne$Mbf2021
       driverClassName: oracle.jdbc.OracleDriver
 
     # Database ILINK
