--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,23 +1,33 @@
 spring:
   datasource:
-    # Primary database
+    # Database SPR
     primary:
       jdbc-url: jdbc:postgresql://ups-fo-spr-database.mobifone.vn:5432/spr
       username: spr
       password: Dts@12345
       driverClassName: org.postgresql.Driver
-    # Secondary database
+
+    # Database VASP
     secondary:
       jdbc-url: jdbc:oracle:thin:@10.3.17.153:1521:db01
       username: VASP4_SUBS
       password: abcd1234
       driverClassName: oracle.jdbc.OracleDriver
+
     # Database ILINK
     third:
       jdbc-url: jdbc:postgresql://ups-fo-spr-database.mobifone.vn:5432/ilink
       username: ilink
       password: ilink
       driverClassName: org.postgresql.Driver
+
+    # Database ILARC
+    fourth:
+      jdbc-url: jdbc:postgresql://10.3.17.139:5432/ilarc
+      username: admin_report
+      password: admin_report
+      driverClassName: org.postgresql.Driver
+
 app:
   config-path: /web-admin/config/
   auto-import: /home/spr/import/
